--- a/package.json
+++ b/package.json
@@ -15,5 +15,18 @@
   "bugs": {
     "url": "https://github.com/pedrobraghin/nestnook-backend/issues"
   },
-  "homepage": "https://github.com/pedrobraghin/nestnook-backend#readme"
+  "homepage": "https://github.com/pedrobraghin/nestnook-backend#readme",
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.4.1",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-standard-with-typescript": "^38.0.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-n": "^16.0.2",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "typescript": "^5.1.6"
+  }
 }
