--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Backend of NestNook website",
   "main": "index.js",
   "scripts": {
-    "test": "npm run test",
+    "test": "jest",
     "prepare": "husky install"
   },
   "repository": {
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/pedrobraghin/nestnook-backend#readme",
   "devDependencies": {
+    "@jest/globals": "^29.6.3",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -28,7 +29,10 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "typescript": "^5.1.6",
-    "husky": "^8.0.0"
+    "husky": "^8.0.0",
+    "jest": "^29.6.3",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
   }
 }
