--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
+    "test:component": "cucumber-js",
     "prepare": "husky install"
   },
   "repository": {
@@ -18,6 +19,7 @@
   },
   "homepage": "https://github.com/pedrobraghin/nestnook-backend#readme",
   "devDependencies": {
+    "@cucumber/cucumber": "^9.4.0",
     "@jest/globals": "^29.6.3",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "eslint": "^8.2.0",
