--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "jest",
     "test:component": "cucumber-js",
+    "test:mutation": "stryker run",
     "prepare": "husky install"
   },
   "repository": {
@@ -21,6 +22,8 @@
   "devDependencies": {
     "@cucumber/cucumber": "^9.4.0",
     "@jest/globals": "^29.6.3",
+    "@stryker-mutator/core": "^7.1.1",
+    "@stryker-mutator/jest-runner": "^7.1.1",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
