--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "test": "jest",
     "test:component": "cucumber-js",
     "test:mutation": "stryker run",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "start": "node ./dist/index.js",
+    "start:dev": "tsnd --rs --respawn --transpile-only ./src/index.ts",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
