--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "nestnook-backend",
   "version": "1.0.0",
   "description": "Backend of NestNook website",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "test": "jest",
     "test:component": "cucumber-js",
     "test:mutation": "stryker run",
     "prepare": "husky install",
-    "start": "node ./dist/index.js",
-    "start:dev": "tsnd --rs --respawn --transpile-only ./src/index.ts",
+    "start": "node ./dist/main.js",
+    "start:dev": "tsnd --rs --respawn --transpile-only ./src/main.ts",
     "build": "tsc"
   },
   "repository": {
@@ -27,6 +27,8 @@
     "@jest/globals": "^29.6.3",
     "@stryker-mutator/core": "^7.1.1",
     "@stryker-mutator/jest-runner": "^7.1.1",
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.5.3",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -39,9 +41,15 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^8.0.0",
     "jest": "^29.6.3",
+    "prisma": "^5.2.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
+  },
+  "dependencies": {
+    "@prisma/client": "^5.1.1",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2"
   }
 }
