--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.4",
     "@types/node": "^20.5.3",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -43,6 +44,7 @@
     "husky": "^8.0.0",
     "jest": "^29.6.3",
     "prisma": "^5.2.0",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
