--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "test:component": "cucumber-js",
     "test:mutation": "stryker run",
     "prepare": "husky install",
-    "start": "node ./dist/main.js",
-    "start:dev": "tsnd --rs --respawn --transpile-only ./src/main.ts",
-    "build": "tsc",
-    "gm": "sh ./scripts/generate-module.sh"
+    "start": "node -r tsconfig-paths/register ./dist/main.js",
+    "start:dev": "tsnd -r tsconfig-paths/register --rs --respawn --transpile-only ./src/main.ts",
+    "build": "tsc -p tsconfig.build.json",
+    "gm": "sh ./scripts/generate.sh"
   },
   "repository": {
     "type": "git",
@@ -49,6 +49,7 @@
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.6"
   },
   "dependencies": {
