--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@jest/globals": "^29.6.3",
     "@stryker-mutator/core": "^7.1.1",
     "@stryker-mutator/jest-runner": "^7.1.1",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.4",
     "@types/node": "^20.5.3",
@@ -54,6 +55,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.1.1",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2"
   }
