--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,8 @@
       "@infra/*": ["infra/*"],
       "@common/*": ["common/*"],
       "@config/*": ["config/*"],
-      "@modules/*": ["modules/*"]
+      "@modules/*": ["modules/*"],
+      "@utils/*": ["utils/*"]
     } /* Specify a set of entries that re-map imports to additional lookup locations. */,
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
