--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.4",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.5.3",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
@@ -57,6 +58,7 @@
     "@prisma/client": "^5.1.1",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2"
   }
 }
