--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,12 +30,13 @@
     "moduleResolution": "node" /* Specify how TypeScript looks up a file from a given module specifier. */,
     "baseUrl": "src" /* Specify the base directory to resolve non-relative module names. */,
     "paths": {
-      "@types/*": ["@types/*"],
+      "@@types/*": ["@types/*"],
       "@infra/*": ["infra/*"],
       "@common/*": ["common/*"],
       "@config/*": ["config/*"],
       "@modules/*": ["modules/*"],
-      "@utils/*": ["utils/*"]
+      "@utils/*": ["utils/*"],
+      "@src/*": ["./*"]
     } /* Specify a set of entries that re-map imports to additional lookup locations. */,
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
