--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.5.0"
+    "mongoose": "^7.5.0",
+    "zod": "^3.22.2"
   }
 }
