fix: fix path alias

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,23 +4,26 @@
     "experimentalDecorators": true,
     "module": "commonjs",
     "moduleResolution": "node",
-    "baseUrl": "./",
+    "baseUrl": ".",
     "paths": {
-      "@@types/*": ["src/@types/*"],
-      "@infra/*": ["src/infra/*"],
-      "@common/*": ["src/common/*"],
-      "@config/*": ["src/config/*"],
+      "@@types/*": ["./src/@types/*"],
+      "@infra/*": ["./src/infra/*"],
+      "@common/*": ["./src/common/*"],
+      "@config/*": ["./src/config/*"],
       "@modules/*": ["./src/modules/*"],
-      "@utils/*": ["src/utils/*"],
-      "@src/*": ["src/*"]
+      "@utils/*": ["./src/utils/*"],
+      "@src/*": ["./src/*"]
     },
+    "lib": ["ES6"],
     "allowJs": true,
+    "removeComments": true,
     "outDir": "./dist",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "typeRoots": ["./node_modules/@types", "./src/@types"]
   },
   "include": ["src/**/*", "tests/**/*"],
   "files": ["src/main.ts"]
