--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@stryker-mutator/core": "^7.1.1",
     "@stryker-mutator/jest-runner": "^7.1.1",
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.4",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.4",
     "@types/jsonwebtoken": "^9.0.2",
@@ -58,6 +59,7 @@
   "dependencies": {
     "@prisma/client": "^5.1.1",
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
