--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
+    "uuid": "^9.0.0",
     "zod": "^3.22.2"
   }
 }
