--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/node": "^20.5.3",
     "@types/sinon": "^10.0.16",
     "@types/supertest": "^2.0.12",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -67,6 +68,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
+    "swagger-ui-express": "^5.0.0",
     "uuid": "^9.0.0",
     "zod": "^3.22.2"
   }
