--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: admin
       MONGO_INITDB_ROOT_PASSWORD: adminpassword
+      MONGO_INITDB_DATABASE: nestnook
     volumes:
       - mongodata:/data/db
 
@@ -19,7 +20,7 @@ services:
     volumes:
       - postgres:/var/lib/postgresql/data
     environment:
-      POSTGRES_DB: store
+      POSTGRES_DB: nestnook
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: password
 
