--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,10 +3,23 @@
     "es2021": true,
     "node": true
   },
-  "extends": ["standard-with-typescript", "airbnb", "airbnb/hooks"],
+  "extends": ["standard-with-typescript"],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "rules": {}
+  "plugins": ["prettier"],
+  "rules": {
+    "import/no-cycle": [2, { "maxDepth": 1 }],
+    "@typescript-eslint/semi": "off",
+    "@typescript-eslint/comma-dangle": "off",
+    "@typescript-eslint/naming-convention": "off",
+    "@typescript-eslint/strict-boolean-expressions": "off",
+    "@typescript-eslint/space-before-function-paren": "off",
+    "@typescript-eslint/member-delimiter-style": "off",
+    "@typescript-eslint/no-floating-promises": "off",
+    "@typescript-eslint/no-misused-promises": "off",
+    "@typescript-eslint/no-extraneous-class": "off",
+    "prettier/prettier": "error"
+  }
 }
