--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "node -r tsconfig-paths/register ./dist/main.js",
     "start:dev": "tsnd -r tsconfig-paths/register --rs --respawn --transpile-only ./src/main.ts",
     "build": "tsc -p tsconfig.build.json && tsc-alias",
-    "gm": "sh ./scripts/generate.sh"
+    "gm": "sh ./scripts/generate.sh",
+    "lint": "eslint ./src/**"
   },
   "repository": {
     "type": "git",
@@ -38,18 +39,16 @@
     "@types/sinon": "^10.0.16",
     "@types/supertest": "^2.0.12",
     "@types/swagger-ui-express": "^4.1.3",
-    "@typescript-eslint/eslint-plugin": "^6.4.1",
-    "eslint": "^8.2.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-standard-with-typescript": "^38.0.0",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-n": "^16.0.2",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "eslint": "^8.49.0",
+    "eslint-config-standard-with-typescript": "^39.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-n": "^16.1.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^8.0.0",
     "jest": "^29.6.3",
+    "prettier": "3.0.3",
     "prisma": "^5.2.0",
     "sinon": "^15.2.0",
     "supertest": "^6.3.3",
@@ -58,7 +57,7 @@
     "ts-node-dev": "^2.0.0",
     "tsc-alias": "^1.8.7",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.6"
+    "typescript": "^5.2.2"
   },
   "dependencies": {
     "@prisma/client": "^5.1.1",
