chore: prettier config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,8 @@
     "@typescript-eslint/no-floating-promises": "off",
     "@typescript-eslint/no-misused-promises": "off",
     "@typescript-eslint/no-extraneous-class": "off",
-    "prettier/prettier": "error"
+    "prettier/prettier": ["error", {
+      "endOfLine": "auto"
+    }],
   }
 }
